# knowledgehub

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: knowledge-bases.example.yaml
deploy/: com.example.knowledgehub.daily-scan.plist.example
docs/: CLAUDE_CODE_INTEGRATION.md  CODEX_INTEGRATION.md  INSTALLATION_ACCEPTANCE.md  OPERATIONS.md  TECHNICAL_IMPLEMENTATION.md
scripts/: knowledgehub-daily-scan.sh.example
src/knowledgehub/: __init__.py  chunker.py  cli.py  config.py  database.py  indexer.py  mcp_server.py  models.py  parsers.py  security.py  service.py
tests/: conftest.py  test_cli_and_config.py  test_indexer_and_search.py  test_mcp_protocol.py  test_security_and_chunking.py
