[project]
name = "knowledgehub"
version = "0.1.0"
description = "Local multi-root knowledge indexing and read-only MCP search service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "mcp>=1.27,<2",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "PyYAML>=6,<7",
]

[project.scripts]
kb = "knowledgehub.cli:main"
knowledgehub-mcp = "knowledgehub.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledgehub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
